<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_normal">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/primaryColor"
        android:layout_below="@id/logoImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/padding_large" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name_hint"
        android:inputType="textPersonName"
        android:padding="@dimen/padding_normal"
        android:layout_below="@id/titleText"
        android:layout_marginTop="@dimen/padding_large" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:layout_below="@id/nameInput"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/padding_normal" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_button"
        android:layout_below="@id/nameInput"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/padding_normal" />

    <TextView
        android:id="@+id/outputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textSize="@dimen/text_size_normal"
        android:textColor="@color/textColor"
        android:gravity="center"
        android:layout_below="@id/submitButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/padding_large" />

</RelativeLayout>
